add simple schduler & py binding api

--- a/experimental/ukernel/Makefile.rocm
+++ b/experimental/ukernel/Makefile.rocm
@@ -26,9 +26,49 @@ HIPCCFLAGS += -DUSE_REDIS_OOB --compiler-options "$(REDIS_CFLAGS)"
 LDFLAGS    += $(REDIS_LIBS)
 endif
 
+# pytorch
+PYTHON ?= python3
+PYTHON_VERSION := $(shell $(PYTHON) -c "import sysconfig; print(sysconfig.get_config_var('LDVERSION'))")
+PYTHON_INCLUDES := $(shell $(PYTHON) -c "import sysconfig; print('-I' + sysconfig.get_path('include'))")
+PYTHON_LIBDIR := $(shell $(PYTHON) -c "import sysconfig; print('-L' + sysconfig.get_config_var('LIBDIR'))")
+
+PYBIND_INCLUDES := $(shell $(PYTHON) -m pybind11 --includes)
+
+PYTORCH_INCLUDES := $(shell $(PYTHON) -c \
+"from torch.utils.cpp_extension import include_paths; \
+print(' '.join(['-I'+p for p in include_paths()]))")
+
+PYTORCH_LIBDIR := $(shell $(PYTHON) -c \
+"from torch.utils.cpp_extension import library_paths; \
+print(' '.join(['-L'+p for p in library_paths()]))")
+
+# PyTorch runtime rpath (VERY IMPORTANT)
+PYTORCH_RPATH := $(shell $(PYTHON) -c \
+"from torch.utils.cpp_extension import library_paths; \
+print(':'.join(library_paths()))")
+
+CXXFLAGS += \
+    $(PYTHON_INCLUDES) \
+    $(PYBIND_INCLUDES) \
+    $(PYTORCH_INCLUDES) \
+    -DTORCH_API_INCLUDE_EXTENSION_H
+
+HIPCCFLAGS += \
+    $(PYTHON_INCLUDES) \
+    $(PYBIND_INCLUDES) \
+    $(PYTORCH_INCLUDES) \
+    -DTORCH_API_INCLUDE_EXTENSION_H
+
+TORCH_LDFLAGS := \
+    $(PYTORCH_LIBDIR) \
+    -ltorch_python -ltorch_cpu -ltorch -lc10 \
+    -lpython$(PYTHON_VERSION)
+
+LDFLAGS += -Wl,-rpath,$(PYTORCH_RPATH)
+
 # Source files
-SRC_CPP := $(shell find src -name '*.cc' | grep -v 'src/device') # skip device now
-SRC_CU  := $(shell find src -name '*.cu' | grep -v 'src/device')
+SRC_CPP := $(shell find src -name '*.cc' | grep -v 'src/compute') # skip device now
+SRC_CU  := $(shell find src -name '*.cu' | grep -v 'src/compute')
 
 # Test sources
 TEST_DIR := tests
@@ -39,13 +79,18 @@ OBJ_CC   := $(SRC_CPP:.cc=.o)
 OBJ_CU   := $(SRC_CU:.cu=.o)
 OBJ_TEST := $(SRC_TEST:.cc=.o)
 
+# Pybind
+PYBIND_SRC := src/python_bindings.cc
+PYBIND_OBJ := $(PYBIND_SRC:.cc=.o)
+PYBIND_SO  := py/ukernel.so
+
 # Targets
 STATIC_LIB  := libukernel.a
 SHARED_LIB  := libukernel.so
 TARGET_TEST := test_main
 
 # Default target
-all: $(STATIC_LIB) $(SHARED_LIB) $(TARGET_TEST)
+all: $(STATIC_LIB) $(SHARED_LIB) $(TARGET_TEST) $(PYBIND_SO)
 
 # Compilation rules
 %.o: %.cc
@@ -64,13 +109,19 @@ $(SHARED_LIB): $(OBJ_CC) $(OBJ_CU)
 $(TARGET_TEST): $(OBJ_TEST) $(STATIC_LIB)
 	$(HIPCC) $(HIPCCFLAGS) $(INCLUDES) $(OBJ_TEST) $(STATIC_LIB) -lamdhip64 $(LDFLAGS) -o $@
 
+$(PYBIND_SO): $(PYBIND_OBJ) $(STATIC_LIB)
+	$(CXX) -shared $(CXXFLAGS) $^ \
+	       -lamdhip64 \
+	       $(LDFLAGS) $(TORCH_LDFLAGS) \
+	       -o $@
+
 # Run tests
 run_test: $(TARGET_TEST)
 	./$(TARGET_TEST)
 
 # Clean rule
 clean:
-	rm -f $(OBJ_CC) $(OBJ_CU) $(OBJ_TEST) $(TARGET_TEST) $(STATIC_LIB) $(SHARED_LIB) *.d src/*.d src/transport/*.d tests/*.d
+	rm -f $(OBJ_CC) $(OBJ_CU) $(OBJ_TEST) $(TARGET_TEST) $(STATIC_LIB) $(SHARED_LIB) $(PYBIND_SO) *.d src/*.d src/transport/*.d tests/*.d
 
 # Include dependencies
 -include $(OBJ_CC:.o=.d) $(OBJ_CU:.o=.d) $(OBJ_TEST:.o=.d)
