--- a/experimental/ukernel/src/compute/Makefile
+++ b/experimental/ukernel/src/compute/Makefile
@@ -6,18 +6,18 @@ NVCCFLAGS:= -O3 -g -G -Xcompiler -Wall -arch=sm_80
 CUDA_HOME ?= /usr/local/cuda
 GDRCOPY_LIBDIR = $(abspath ../../../../thirdparty/gdrcopy/src)
 
-INCLUDES := -I./ -I$(CUDA_HOME)/include
+INCLUDES := -I./ -I./fifo -I$(CUDA_HOME)/include
 LIBS := -L$(CUDA_HOME)/lib -lcudart -lcuda -lnuma \
         -L$(GDRCOPY_LIBDIR) -lgdrapi
 
 RPATH = -Xlinker -rpath -Xlinker $(GDRCOPY_LIBDIR)
 
-COMMON_CPP := c2d_fifo.cc
+COMMON_CPP := fifo/c2d_fifo.cc # fifo/d2c_fifo.cc
 COMMON_CU  := operator.cu
 
 TEST_SRC   := test_persistent.cc
-BENCH_SRC  := bench_fifo.cu
-BENCH_FULL_SRC  := bench_full_fifo.cu
+BENCH_SRC  := benchmarks/bench_fifo.cu
+BENCH_FULL_SRC  := benchmarks/bench_full_fifo.cu
 
 COMMON_OBJ := $(COMMON_CPP:.cc=.o) $(COMMON_CU:.cu=.o)
 TEST_OBJ   := $(TEST_SRC:.cc=.o)
@@ -25,8 +25,8 @@ BENCH_OBJ  := $(BENCH_SRC:.cu=.o)
 BENCH_FULL_OBJ  := $(BENCH_FULL_SRC:.cu=.o)
 
 TEST_BIN  := test_persistent
-BENCH_BIN := bench_fifo
-BENCH_FULL_BIN := bench_full_fifo
+BENCH_BIN := benchmarks/bench_fifo
+BENCH_FULL_BIN := benchmarks/bench_full_fifo
 
 ALL_BIN   := $(TEST_BIN) $(BENCH_BIN) $(BENCH_FULL_BIN)
 
@@ -55,4 +55,4 @@ $(BENCH_FULL_BIN): $(COMMON_OBJ) $(BENCH_FULL_OBJ)
 	$(NVCC) $^ -o $@ $(LIBS) $(RPATH) $(NVCCFLAGS)
 
 clean:
-	rm -f *.o *.d $(ALL_BIN)
+	rm -f *.o ./benchmarks/*.o ./fifo/*.o *.d $(ALL_BIN)
