add sm to sm fifo

--- a/experimental/ukernel/src/compute/Makefile
+++ b/experimental/ukernel/src/compute/Makefile
@@ -12,24 +12,26 @@ LIBS := -L$(CUDA_HOME)/lib -lcudart -lcuda -lnuma \
 
 RPATH = -Xlinker -rpath -Xlinker $(GDRCOPY_LIBDIR)
 
-COMMON_CPP := fifo/c2d_fifo.cc fifo/d2c_fifo.cpp
+COMMON_CPP := fifo/c2d_fifo.cc fifo/d2c_fifo.cpp fifo/sm_fifo.cc
 COMMON_CU  := operator.cu
 
 TEST_SRC   := test_persistent.cc
 BENCH_SRC  := benchmarks/bench_fifo.cu
 BENCH_FULL_SRC  := benchmarks/bench_full_fifo.cu
+BENCH_SM_SRC  := benchmarks/bench_sm_fifo.cu
 
 COMMON_OBJ := $(COMMON_CPP:.cc=.o) $(COMMON_CU:.cu=.o)
 TEST_OBJ   := $(TEST_SRC:.cc=.o)
 BENCH_OBJ  := $(BENCH_SRC:.cu=.o)
 BENCH_FULL_OBJ  := $(BENCH_FULL_SRC:.cu=.o)
+BENCH_SM_OBJ := $(BENCH_SM_SRC:.cu=.o)
 
 TEST_BIN  := test_persistent
 BENCH_BIN := benchmarks/bench_fifo
 BENCH_FULL_BIN := benchmarks/bench_full_fifo
+BENCH_SM_BIN := benchmarks/bench_sm_fifo
 
-ALL_BIN   := $(TEST_BIN) $(BENCH_BIN) $(BENCH_FULL_BIN)
-
+ALL_BIN   := $(TEST_BIN) $(BENCH_BIN) $(BENCH_FULL_BIN) ${BENCH_SM_BIN}
 
 .PHONY: all test bench clean
 
@@ -37,7 +39,7 @@ all: $(ALL_BIN)
 
 test: $(TEST_BIN)
 
-bench: $(BENCH_BIN) $(BENCH_FULL_BIN)
+bench: $(BENCH_BIN) $(BENCH_FULL_BIN) ${BENCH_SM_BIN}
 
 %.o: %.cc
 	$(CXX) -c $< -o $@ $(CXXFLAGS) $(INCLUDES)
@@ -52,6 +54,9 @@ $(BENCH_BIN): $(COMMON_OBJ) $(BENCH_OBJ)
 	$(NVCC) $^ -o $@ $(LIBS) $(RPATH) $(NVCCFLAGS)
 
 $(BENCH_FULL_BIN): $(COMMON_OBJ) $(BENCH_FULL_OBJ)
+	$(NVCC) $^ -o $@ $(LIBS) $(RPATH) $(NVCCFLAGS)
+
+${BENCH_SM_BIN}: $(COMMON_OBJ) $(BENCH_SM_OBJ)
 	$(NVCC) $^ -o $@ $(LIBS) $(RPATH) $(NVCCFLAGS)
 
 clean:
