collective(rdma and efa): Add Intel RDMA NIC support with conditional compilation
Add comprehensive support for Intel RDMA NICs (irdma driver, vendor 0x8086)
with Intel-specific configurations controlled via USE_INTEL_RDMA_NIC=1 flag.

Changes:
- Add conditional compilation flags:
  * INTEL_RDMA_NIC for Intel-specific logic
  * MTU_4096 for MTU-dependent optimizations (controls kMaxIovs sizing)
- Configure Intel-specific parameters in collective/efa:
  * kMaxIovs increased from 64 to 256 when MTU_4096 is defined
  * MTU reduced to 4096 (vs 9000 for EFA)
  * Higher bandwidth: 200 Gbps link for EFA
  * MANAGED mode for cudaMallocManaged support
- Add Intel device detection in util_efa.cc:
  * Accept only "irdma" device name
  * Verify vendor ID 0x8086
  * Require IBV_LINK_LAYER_ETHERNET
- Update build system to propagate USE_INTEL_RDMA_NIC flag:
  * build.sh and build_and_install.sh
  * Makefiles for collective/efa and nccl-sg define both macros
  * collective/rdma Makefile only defines INTEL_RDMA_NIC (MTU read from hardware)
- Ensure consistent struct layout between host and device code via NVCUFLAGS_EXTRA

Architectural note: Separate MTU_4096 macro from INTEL_RDMA_NIC for better
semantic clarity - kMaxIovs size is MTU-dependent, not Intel-specific.

Usage: USE_INTEL_RDMA_NIC=1 ./build.sh cuda [ccl_efa|ccl_rdma]

Default behavior unchanged when USE_INTEL_RDMA_NIC is not set.

Signed-off-by: Manoj Gopalakrishnan <manoj.gopalakrishnan@intel.com>

--- a/collective/efa/Makefile
+++ b/collective/efa/Makefile
@@ -10,6 +10,12 @@ LIBS = -L ${CUDA_HOME}/lib64 -L ${EFA_HOME}/lib -libverbs -lefa -lcudart -lcuda 
 LIBS_SHARED = ${LIBS}
 # Added -MMD -MP for automatic dependency generation
 override CXXFLAGS += -O3 -g -std=c++17 -Wno-pointer-arith -Wno-interference-size -fPIC -DUSE_CUDA -MMD -MP
+
+# Add Intel RDMA NIC support if USE_INTEL_RDMA_NIC=1
+ifeq ($(USE_INTEL_RDMA_NIC),1)
+  override CXXFLAGS += -DINTEL_RDMA_NIC -DMTU_4096
+endif
+
 PLUGIN_SO = libnccl-net-efa.so
 
 lib_src = $(wildcard *.cc)
