--- a/collective/rdma/Makefile
+++ b/collective/rdma/Makefile
@@ -9,6 +9,12 @@ LIBS = -lglog -lgflags -lgtest -lz -lelf -libverbs -L /usr/local/cuda/lib64 -lcu
 LIBS_SHARED = -lglog -lgflags -lgtest -lz -lelf -libverbs
 # Added -MMD -MP for automatic dependency generation
 override CXXFLAGS += -O3 -g -std=c++17 -Wno-pointer-arith -Wno-interference-size -fPIC -DUSE_CUDA -MMD -MP
+
+# Add Intel RDMA NIC support if USE_INTEL_RDMA_NIC=1
+ifeq ($(USE_INTEL_RDMA_NIC),1)
+  override CXXFLAGS += -DINTEL_RDMA_NIC
+endif
+
 PLUGIN_SO = libnccl-net-uccl.so
 NCCL_INC:= -I$(NCCL_HOME)/build/include -I$(NCCL_HOME)/src/include -I$(CUDA_HOME)/include
 
