--- a/docker/Dockerfile.gh
+++ b/docker/Dockerfile.gh
@@ -1,4 +1,4 @@
-ARG BASE_IMAGE=nvidia/cuda:12.4.1-devel-ubuntu22.04
+ARG BASE_IMAGE=nvidia/cuda:12.8.0-devel-ubuntu22.04
 FROM ${BASE_IMAGE}
 ARG PY_VER=3.13
 
@@ -35,8 +35,8 @@ RUN apt-get update && \
 # ─────────────────────────────────────────────────────────
 RUN python${PY_VER} -m pip install --no-cache-dir build auditwheel pybind11
 
-RUN python${PY_VER} -m pip install --no-cache-dir torch==2.6.0+cu126 \
-    --index-url https://download.pytorch.org/whl/cu126
+RUN python${PY_VER} -m pip install --no-cache-dir torch torchvision torchaudio \
+    --index-url https://download.pytorch.org/whl/cu128
 
 RUN python${PY_VER} -m pip install --no-cache-dir --upgrade setuptools
 
