Initial unified build setup

--- a/p2p/Makefile
+++ b/p2p/Makefile
@@ -95,6 +95,22 @@ else
 OBJECTS := $(SOURCES:.cc=.o)
 endif
 
+# Transport library configuration (comma-separated)
+TRANSPORTS ?= rdma,tcp,tcpx,efa
+TRANSPORT_LIBS :=
+ifneq (,$(findstring rdma,$(TRANSPORTS)))
+    TRANSPORT_LIBS += libuccl_p2p_rdma.so
+endif
+ifneq (,$(findstring tcp,$(TRANSPORTS)))
+    TRANSPORT_LIBS += libuccl_p2p_tcp.so
+endif
+ifneq (,$(findstring tcpx,$(TRANSPORTS)))
+    TRANSPORT_LIBS += libuccl_p2p_tcpx.so
+endif
+ifneq (,$(findstring efa,$(TRANSPORTS)))
+    TRANSPORT_LIBS += libuccl_p2p_efa.so
+endif
+
 # Build the shared libraries
 ifeq ($(USE_TCPX),1)
 # Default target
@@ -108,7 +124,7 @@ $(P2P_SHARED_LIB): $(CAPI_OBJECT) $(CORE_OBJECTS) $(CU_OBJECTS)
 	      -Wl,-rpath,$(CUDA_LIB) $(PYTHON_LIB)
 else
 # Default target
-all: $(P2P_PYTHON_EXT) $(P2P_SHARED_LIB)
+all: $(P2P_PYTHON_EXT) $(P2P_SHARED_LIB) $(TRANSPORT_LIBS)
 
 $(P2P_PYTHON_EXT): $(OBJECTS)
 	$(CXX) $(OBJECTS) \
@@ -132,23 +148,75 @@ nccl/%.o: nccl/%.cc
 	@mkdir -p nccl
 	$(CXX) $(CXXFLAGS) $(PYBIND11_INCLUDES) -I. -c $< -o $@
 
+# Transport library build rules
+
+# RDMA transport (default, no flags needed)
+libuccl_p2p_rdma.so: engine_rdma.o rdma_factory.o
+	$(CXX) -shared $^ -o $@ -L$(CUDA_LIB) -lcudart -lcuda -libverbs -lglog -lgflags -lpthread -Wl,-rpath,$(CUDA_LIB)
+
+engine_rdma.o: engine.cc
+	$(CXX) $(CXXFLAGS) -I. -c $< -o $@
+
+rdma_factory.o: rdma_factory.cc
+	$(CXX) $(CXXFLAGS) -I. -c $< -o $@
+
+# TCP transport (with NCCL flag)
+libuccl_p2p_tcp.so: engine_tcp.o nccl/nccl_endpoint_tcp.o tcp_factory.o
+	$(CXX) -shared $^ -o $@ -L$(CUDA_LIB) -lcudart -lcuda -L$(NCCL_LIB) -lnccl -lglog -lgflags -lpthread -Wl,-rpath,$(CUDA_LIB):$(NCCL_LIB)
+
+engine_tcp.o: engine.cc
+	$(CXX) $(CXXFLAGS) -DUCCL_P2P_USE_NCCL -I$(NCCL_INC) -I. -c $< -o $@
+
+nccl/nccl_endpoint_tcp.o: nccl/nccl_endpoint.cc
+	@mkdir -p nccl
+	$(CXX) $(CXXFLAGS) -DUCCL_P2P_USE_NCCL -I$(NCCL_INC) -I. -c $< -o $@
+
+tcp_factory.o: tcp_factory.cc
+	$(CXX) $(CXXFLAGS) -DUCCL_P2P_USE_NCCL -I$(NCCL_INC) -I. -c $< -o $@
+
+# TCPX transport
+libuccl_p2p_tcpx.so: nccl_tcpx_endpoint_lib.o tcpx_factory.o
+	$(CXX) -shared $^ -o $@ -L$(CUDA_LIB) -lcudart -lcuda -L$(NCCL_LIB) -lnccl -lglog -lgflags -lpthread -Wl,-rpath,$(CUDA_LIB):$(NCCL_LIB)
+
+nccl_tcpx_endpoint_lib.o: nccl_tcpx_endpoint.cc
+	$(CXX) $(CXXFLAGS) -DUCCL_P2P_USE_TCPX -I$(NCCL_INC) -I. -c $< -o $@
+
+tcpx_factory.o: tcpx_factory.cc
+	$(CXX) $(CXXFLAGS) -DUCCL_P2P_USE_TCPX -I$(NCCL_INC) -I. -c $< -o $@
+
+# EFA transport (AWS Elastic Fabric Adapter)
+libuccl_p2p_efa.so: engine_efa.o efa_factory.o
+	$(CXX) -shared $^ -o $@ -L$(CUDA_LIB) -lcudart -lcuda -L$(EFA_HOME)/lib -lefa -libverbs -lglog -lgflags -lpthread -Wl,-rpath,$(CUDA_LIB):$(EFA_HOME)/lib
+
+engine_efa.o: engine.cc
+	$(CXX) $(CXXFLAGS) -DUCCL_P2P_USE_EFA -I$(EFA_HOME)/include -I. -c $< -o $@
+
+efa_factory.o: efa_factory.cc
+	$(CXX) $(CXXFLAGS) -DUCCL_P2P_USE_EFA -I$(EFA_HOME)/include -I. -c $< -o $@
+
 ifeq ($(USE_TCPX),1)
 install: $(P2P_SHARED_LIB)
 	install -m 755 $(P2P_SHARED_LIB) $(LIBDIR)/
 	install -m 644 $(CAPI_HEADER) $(INCDIR)/
 else
-install: $(P2P_PYTHON_EXT) $(P2P_SHARED_LIB)
+install: $(P2P_PYTHON_EXT) $(P2P_SHARED_LIB) $(TRANSPORT_LIBS)
 	$(MAKE) $(P2P_PYTHON_EXT)
 	@mkdir -p $(INSTALL_DIR)
 	@cp $(P2P_PYTHON_EXT) $(INSTALL_DIR)/
 	@echo "Installation complete. Module installed as: $(INSTALL_DIR)/$(P2P_PYTHON_EXT)"
 	install -m 755 $(P2P_SHARED_LIB) $(LIBDIR)/
+	install -m 755 $(TRANSPORT_LIBS) $(LIBDIR)/
 	install -m 644 $(CAPI_HEADER) $(INCDIR)/
+	@echo "Installed transport libraries: $(TRANSPORT_LIBS)"
 endif
 # Clean build artifacts
 clean:
 	rm -f $(OBJECTS) $(CAPI_OBJECT) $(P2P_SHARED_LIB)
 	rm -f nccl/*.o
+	rm -f engine_rdma.o engine_tcp.o engine_efa.o
+	rm -f rdma_factory.o tcp_factory.o tcpx_factory.o efa_factory.o
+	rm -f nccl/nccl_endpoint_tcp.o nccl_tcpx_endpoint_lib.o
+	rm -f $(TRANSPORT_LIBS)
 ifneq ($(USE_TCPX),1)
 	rm -f $(P2P_PYTHON_EXT)
 endif
@@ -167,11 +235,25 @@ install-deps:
 # Help target
 help:
 	@echo "Available targets:"
-	@echo "  all          - Build the pybind11 module"
-	@echo "  install      - Install the module to Python site-packages"
+	@echo "  all          - Build the pybind11 module and transport libraries"
+	@echo "  install      - Install the module and libraries to system"
 	@echo "  clean        - Remove build artifacts"
 	@echo "  test         - Run the test script"
 	@echo "  install-deps - Install pybind11 dependency"
 	@echo "  help         - Show this help message"
+	@echo ""
+	@echo "Build options:"
+	@echo "  TRANSPORTS   - Comma-separated transports to build (default: rdma,tcp,tcpx,efa)"
+	@echo "                 Examples:"
+	@echo "                   make TRANSPORTS=rdma"
+	@echo "                   make TRANSPORTS=rdma,tcp"
+	@echo "                   make TRANSPORTS=efa"
+	@echo "                   make TRANSPORTS=rdma,efa"
+	@echo ""
+	@echo "Runtime configuration:"
+	@echo "  UCCL_P2P_TRANSPORT - Select transport at runtime: rdma | tcp | tcpx | efa"
+	@echo "                       Default: rdma"
+	@echo "                       Example: export UCCL_P2P_TRANSPORT=tcp"
+	@echo "                       Example: export UCCL_P2P_TRANSPORT=efa"
 
 .PHONY: all clean test install-deps help install
